# WoundMeasure

./: .gitignore  Algorithm_Explanation.md  ArUco.docx  Calib_Extrinsics.ini  K.ini  K2.ini  Measure_SIFT.py  NewDesign.md  README.md  RT_OPTIMIZATION_NOTES.md  SU01_深度誤差估計.xlsx  Video_Measurement_Plan.md  Video_Measurement_Walkthrough.md  calibration_result.json  calibration_result_Zebra_1.json  calibration_result_Zebra_1_no_dis.json  calibration_result_c2.json  depth_measure_multi_aruco_sbs_camera_v7.py  depth_measure_multi_aruco_sbs_camera_v7_demo.py  depth_measure_multi_aruco_sbs_camera_v7_demo_live.py  depth_measure_multi_aruco_sbs_camera_v7_demo_nb.py  depth_measure_multi_aruco_sbs_camera_v7_demo_zebra.py  depth_measure_multi_aruco_sbs_camera_v7_demo_zebra_0604_backup_okversion.py  depth_measure_multi_aruco_sbs_camera_v7_demo_zebra_0608_okversion.py  depth_measure_multi_aruco_sbs_camera_v7_demo_zebra_0610_backup.py  depth_measure_multi_aruco_sbs_camera_v7_demo_zebra_0611_backup.py  depth_measure_multi_aruco_sbs_camera_v7_demo_zebra_0612_backup.py  depth_measure_multi_aruco_sbs_camera_v7_demo_zebra_0617_backup.py  depth_measure_multi_aruco_sbs_camera_v7_demo_zebra_0625_backup.py  depth_measure_multi_aruco_sbs_camera_v7_demo_zebra_0702backup.py  depth_measure_multi_aruco_sbs_camera_v7_demo_zebra_circle.py  depth_measure_multi_aruco_sbs_camera_v7_demo_zebra_live_version_0602.py  gen_ArUco_image.py  read_dng.py  resize_wound_detection_videos.py  specular_detection_video_ui.py  specular_reference_point_ui.py  triangulated_point.json  video_merger.py  video_preprocess_tuner.py  (+6 more)
Algorithm/: __init__.py  aruco_pose.py  camera_preprocess.py  perf_timer.py  specular_detection.py  stereo_matching.py  video_pose_analysis.py
openMVS-develop/libs/SFM/: BundleAdjustment.cpp  BundleAdjustment.h  BundleAdjustmentCostFunctions.h  CLAUDE.md  CMakeLists.txt  Camera.cpp  Camera.h  Common.cpp  Common.h  DerivePinholeReprojectionErrorAnalytic.py  FeaturesExtractor.cpp  FeaturesExtractor.h  GlobalAlignment.cpp  GlobalAlignment.h  GlobalPositioning.cpp  GlobalPositioning.h  GlobalRotationAveraging.cpp  GlobalRotationAveraging.h  GlobalScaleAveraging.cpp  GlobalScaleAveraging.h  GlobalTranslationAveraging.cpp  GlobalTranslationAveraging.h  Image.cpp  Image.h  ImagePair.cpp  ImagePair.h  ImportCOLMAP.cpp  ImportCOLMAP.h  ImportROMA2.cpp  ImportROMA2.h  InterfaceMVS.cpp  InterfaceMVS.h  KeyframeExtractor.cpp  KeyframeExtractor.h  MatchGeometric.cpp  MatchGeometric.h  PairsMatcher.cpp  PairsMatcher.h  PairsWeighting.cpp  PairsWeighting.h  (+25 more)
(+988 files in other folders)
